# OpenCourseBot

./: .gitignore  .prettierignore  .replit  LICENSE  README.md  package-lock.json  package.json  pyproject.toml
bots/js/: bot.js  client.js  config.js
bots/js/commands/: find.js  help.js  rate.js  reload.js
bots/js/listeners/: commandStarted.js  ready.js
bots/js/utils/: getUsage.js  replaceCampusNames.js
bots/py/: bot.py  college.py  emojis.py  exceptions.py  major.py  page.py  selection.py  utils.py
bots/py/commands/: admin.py  assist.py  grade.py  gradescrape.py  scrape.py  server.py  stats.py
bots/py/static/: index.html  main.js
